tests/invalid/depth07.h
#include "depth08.h"
